--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
       dockerfile: Dockerfile.api
     environment:
       - LOG_SHORT_TIME=true
+      - LOG_FIELD_BLACKLIST=caller,sequence_number
       - LOG_LEVEL=debug
+      - AMQP_EXCHANGE=ijci
+      - AMQP_ROUTING_KEY=key
       - AMQP_URI=amqp://guest:guest@rabbitmq:5672/
     depends_on:
       - rabbitmq
@@ -19,10 +22,18 @@ services:
       dockerfile: Dockerfile.agent
     environment:
       - LOG_SHORT_TIME=true
+      - LOG_FIELD_BLACKLIST=caller,sequence_number
       - LOG_LEVEL=debug
+      - AMQP_CONSUMER_TAG=ctag
+      - AMQP_EXCHANGE=ijci
+      - AMQP_ROUTING_KEY=key
+      - AMQP_QUEUE_NAME=build-requests
       - AMQP_URI=amqp://guest:guest@rabbitmq:5672/
     depends_on:
       - rabbitmq
+    volumes:
+      - ./repos:/repos
+      - /var/run/docker.sock:/var/run/docker.sock
 
   rabbitmq:
     image: rabbitmq:3-management
