Update API to write a serialized message rather than a bare url.

--- a/schemas/build-request.yaml
+++ b/schemas/build-request.yaml
@@ -1,7 +1,7 @@
 type: object
 properties:
-  repo:
+  repository_url:
     type: string
 additionalProperties: false
 required:
-  - repo
+  - repository_url
