--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,10 @@
 
 
 [[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.15.32"
+
+[[constraint]]
   branch = "master"
   name = "github.com/efritz/chevron"
 
@@ -40,14 +44,6 @@
 [[constraint]]
   branch = "master"
   name = "github.com/efritz/response"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/efritz/scarf"
-
-[[constraint]]
-  name = "github.com/golang/protobuf"
-  version = "1.2.0"
 
 [[constraint]]
   name = "github.com/google/uuid"
@@ -72,14 +68,6 @@
 [[constraint]]
   branch = "master"
   name = "github.com/streadway/amqp"
-
-[[constraint]]
-  branch = "master"
-  name = "golang.org/x/net"
-
-[[constraint]]
-  name = "google.golang.org/grpc"
-  version = "1.14.0"
 
 [[constraint]]
   name = "gopkg.in/src-d/go-git.v4"
