--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -3,5 +3,6 @@ FROM alpine:3.8
 RUN set -ex && \
     apk add --no-cache git mercurial docker
 
+EXPOSE 5000
 CMD ["./ijci-agent"]
 COPY ijci-agent /
