--- a/schemas/build-post.yaml
+++ b/schemas/build-post.yaml
@@ -1,7 +1,15 @@
 type: object
 properties:
+  project_id:
+    type: string
+    pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$
   repository_url:
     type: string
+    minLength: 1
+  commit_branch:
+    type: string
+    minLength: 1
+  commit_hash:
+    type: string
+    minLength: 1
 additionalProperties: false
-required:
-  - repository_url
