--- a/schemas/build-patch.yaml
+++ b/schemas/build-patch.yaml
@@ -37,4 +37,7 @@ properties:
   commit_committed_at:
     type: string
     minLength: 1
+  error_message:
+    type: string
+    minLength: 1
 additionalProperties: false
