--- a/ij.yaml
+++ b/ij.yaml
@@ -1,7 +1,7 @@
 environment:
-  - IMPORT_PATH=github.com/efritz/ijci
+  - IMPORT_PATH=github.com/ij-build/ijci
   - WORKSPACE=/go/src/${IMPORT_PATH}
-  - GO_IMAGE=golang:1.11
+  - GO_IMAGE=golang:1.12
   - SKIP_MIGRATE=
 
 workspace: ${WORKSPACE}
